--- a/app/views/home/rate.html.erb
+++ b/app/views/home/rate.html.erb
@@ -2,3 +2,7 @@
 
 <p>학교 뭐시기 경쟁률~</p>
 <a href="http://localhost:3000/home/mypage">확정</a>
+
+
+
+<iframe height="500" src="http://sugang.korea.ac.kr/lecture/LecSugangFrame.jsp?url=LecMajorSub.jsp&amp;lang=KOR" style="min-width:680px;width:100%;"></iframe>
