--- a/app/views/home/rate.html.erb
+++ b/app/views/home/rate.html.erb
@@ -3,6 +3,14 @@
 <p>학교 뭐시기 경쟁률~</p>
 <a href="http://localhost:3000/home/mypage">확정</a>
 
-
-
-<iframe height="500" src="http://sugang.korea.ac.kr/lecture/LecSugangFrame.jsp?url=LecMajorSub.jsp&amp;lang=KOR" style="min-width:680px;width:100%;"></iframe>
+    <% @courses.each do |course| %>
+      <tr>
+        <td><%= course.campus %></td>
+        <td><%= course.haksu %></td>
+        <td><%= course.bunban %></td>
+        <td><%= course.isu_type %></td>
+        <td><%= course.course_name %></td>
+        <td><%= course.lecturer %></td>
+        <td><%= course.credit %></td>
+      </tr>
+    <% end %>
