--- a/app/views/home/rate.html.erb
+++ b/app/views/home/rate.html.erb
@@ -1,4 +1,17 @@
-<h1>경쟁률페이지(3번)</h1>
+
+<h1>경쟁률 조회</h1>
 
 <p>학교 뭐시기 경쟁률~</p>
 <a href="http://localhost:3000/home/mypage">확정</a>
+
+    <% @courses.each do |course| %>
+      <tr>
+        <td><%= course.campus %></td>
+        <td><%= course.haksu %></td>
+        <td><%= course.bunban %></td>
+        <td><%= course.isu_type %></td>
+        <td><%= course.course_name %></td>
+        <td><%= course.lecturer %></td>
+        <td><%= course.credit %></td>
+      </tr>
+    <% end %>
