--- a/app/views/home/rate.html.erb
+++ b/app/views/home/rate.html.erb
@@ -1,13 +1,5 @@
-<<<<<<< HEAD
-
-<h1>경쟁률 조회</h1>
-
-<p>학교 뭐시기 경쟁률~</p>
-<a href="http://localhost:3000/home/mypage">확정</a>
-
-=======
 <div class="container">
-<h1 class="text-center mt-5">경쟁률페이지</h1>
+<h1 class="text-center mt-5">경쟁률 조회</h1>
 
 <table class="table">
     <thead>
@@ -25,7 +17,6 @@
     <tbody>
     
     
->>>>>>> c9f8430be85911f7a86272ff1c85fadf07ba4be5
     <% @courses.each do |course| %>
       <tr>
         <td><%= course.campus %></td>
@@ -35,10 +26,6 @@
         <td><%= course.course_name %></td>
         <td><%= course.lecturer %></td>
         <td><%= course.credit %></td>
-<<<<<<< HEAD
-      </tr>
-    <% end %>
-=======
         <td><%= %></td>
       </tr>
     <% end %>
@@ -46,4 +33,3 @@
     </tbody>
 </table>
 </div>
->>>>>>> c9f8430be85911f7a86272ff1c85fadf07ba4be5
