--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 
     <% if user_signed_in? %>
       <div class = "my-4 text-center">
-        <%= link_to 'KUSKET', home_index_url%>
+        <%= link_to 'KUSKET', home_index_url, class: "brand-name"%>
       </div>
 
       <nav class = "nav nav-bg justify-content-end">
