--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,7 +37,7 @@
     color: #707070;
 }
 
-.form-width{
+.form-width-hj{
     width: 230px;
 }
 
@@ -51,4 +51,21 @@
 
 .nav-font{
     color: #ffffff;
+}
+
+.brand-name{
+    color: #000000;
+    font-size: 2.5rem;
+}
+
+a:hover{
+    text-decoration: none;
+}
+
+nav a:hover{
+    color: white;
+}
+
+.brand-name:hover{
+    color: black;
 }
