--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,16 @@
-<h1>소개페이지(1번)</h1>
-
 
 <!--로그인 폼-->
 <% if user_signed_in? %>
-<%=current_user.username %><p>님 반갑습니다 !</p>
-<a href="http://localhost:3000/home/rate">시작하기</a>
+<div class = "d-flex align-self-center">
+  <div class = "d-flex flex-column align-items-center">
+    <div>
+      <p><%=current_user.username %>님 반갑습니다 !</p>
+    </div>
+    <div>
+      <a class = "btn btn-danger" href="http://localhost:3000/home/rate">시작하기</a>
+    </div>
+  </div>
+</div>
 <% else %>
   <%= form_for("user", :url => user_session_path) do |f| %>
    
