--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,11 @@
 <style>
-  body {
-    background-image: url("C:\Users\whj02\Desktop\NEXT\hackerton_0519\kusket\app\assets\images\kusket_background.png");
+  html{
+    height: 100%;
+  }
+  body{
+    height: 100%;
+    background: linear-gradient(#BC4444, #6B1A14);
+    background-repeat: no-repeat;
   }
 </style>
 
@@ -8,46 +13,48 @@
 <%=image_tag("join-image.png", class: "join-image")%>
 
 
-<div class = "outer-form-box my-auto mx-auto">
+<div class = "d-flex flex-column outer-form-box my-auto mx-auto">
   <!--로그인 폼-->
-  <h2 class = "text-center align-middle mb-3 mt-2">Join Us</h2>
+  <div class = "mt-4">
+    <h2 class = "text-center align-middle mb-1 mt-2 grey-font">Join Us</h2>
+  </div>
   <div class = "inner-form-box mx-auto px-5">
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= devise_error_messages! %>
 
-      <div class="field">
+      <div class="field grey-font">
         <%= f.label :email, class: "label-font mb-1 mt-4"%><br />
-        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "border-top-0 border-left-0 border-right-0" %>
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "border-top-0 border-left-0 border-right-0 form-width-hj" %>
       </div>
       
       <!--닉네임-->
-      <div class="field">
+      <div class="field grey-font">
         <%= f.label :닉네임, class: "label-font mb-1 mt-2"%><br />
-        <%= f.text_field :username, autofocus: true, autocomplete: "username", class: "border-top-0 border-left-0 border-right-0" %>
+        <%= f.text_field :username, autofocus: true, autocomplete: "username", class: "border-top-0 border-left-0 border-right-0 form-width-hj" %>
       </div>
       
       <!--학년-->
-      <div class="field">
+      <div class="field grey-font">
         <%= f.label :학년, class: "label-font mb-1 mt-2" %><br />
-        <%= f.text_field :grade, autofocus: true, autocomplete: "grade", class: "border-top-0 border-left-0 border-right-0" %>
+        <%= f.text_field :grade, autofocus: true, autocomplete: "grade", class: "border-top-0 border-left-0 border-right-0 form-width-hj" %>
       </div>
       
       
-      <div class="field">
+      <div class="field grey-font">
         <%= f.label :password, class: "label-font mb-1 mt-2" %>
         <% if @minimum_password_length %>
           <em><%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %></em>
         <% end %><br />
-        <%= f.password_field :password, autocomplete: "off", class: "border-top-0 border-left-0 border-right-0"%>
+        <%= f.password_field :password, autocomplete: "off", class: "border-top-0 border-left-0 border-right-0 form-width-hj"%>
       </div>
 
-      <div class="field">
+      <div class="field grey-font">
         <%= f.label :password_confirmation, class: "label-font mb-1 mt-2" %><br />
-        <%= f.password_field :password_confirmation, autocomplete: "off", class: "border-top-0 border-left-0 border-right-0" %>
+        <%= f.password_field :password_confirmation, autocomplete: "off", class: "border-top-0 border-left-0 border-right-0 form-width-hj" %>
       </div>
 
-      <div class="actions">
-        <%= f.submit t('.sign_up'), class: 'align-middle my-3'%>
+      <div class="actions d-flex justify-content-center">
+        <%= f.submit t('.sign_up'), class: 'btn mt-4 btn-danger '%>
       </div>
     <% end %>
 
