--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,6 @@
 @import "bootstrap";
+@import url('https://fonts.googleapis.com/css?family=Muli|Nanum+Gothic');
+
 
 body.firstbg{
     background-image: image-url('kusket_background.png');
@@ -23,11 +25,12 @@ body.firstbg{
 }
 
 .im{
-margin-top: 100px;
+margin-top: 130px;
 
 }
 
 .loginback{
+ margin-top: 60px;
  background-color: white;
  width:380px;
  height:500px;
@@ -92,4 +95,91 @@ font-family: 'Nanum Gothic', sans-serif;
     left: 330px;
     top: 180px;
     z-index: -1;
+}
+
+.outer-form-box{
+    width: 388px;
+    height: 480px;
+    background-color: white;
+    box-shadow: 10px 10px 5px rgba(0,0,0,0.3);
+    border-radius: 10px;
+    position: relative;
+    top: 60px;
+    left: 120px;
+    z-index: 0;
+    
+}
+
+.inner-form-box{
+    width: 388px;
+    height: 400px;
+}
+
+.label-font{
+    font-size: 0.8rem;
+
+}
+
+.join-image{
+    width: 380px;
+    height: 300px;
+    position: absolute;
+    left: 350px;
+    top: 160px;
+    z-index: -1;
+}
+
+
+.grey-font{
+    color: #707070;
+}
+
+.form-width-hj{
+    width: 230px;
+}
+
+.nav-bg{
+    background: linear-gradient(to right, #BC4444, #6B1A14);
+}
+
+.table-font{
+    font-size: 0.8rem;
+}
+
+.nav-font{
+    color: #ffffff;
+}
+
+.brand-name{
+    color: #000000;
+    font-size: 2.5rem;
+}
+
+a:hover{
+    text-decoration: none;
+}
+
+nav a:hover{
+    color: white;
+}
+
+.brand-name:hover{
+    color: black;
+}
+
+th, td{
+    width: 40px;
+}
+
+.nanum{
+
+    font-family: 'Nanum Gothic', sans-serif;
+
+}
+.miran{
+    font-family: 'Merienda One', cursive;
+}
+
+.muli{
+    font-family: 'Muli', sans-serif;
 }
