--- a/app/views/home/mypage.html.erb
+++ b/app/views/home/mypage.html.erb
@@ -1,8 +1,20 @@
-<div class="container">
-<h1 class="text-center mt-5">경쟁률페이지</h1>
 
-<table class="table">
-    <thead>
+
+<div class="container">
+<h5 class="text-center mt-4 mb-4 nanum">경쟁률페이지</h5>
+
+<style>
+td, th{
+  width: 40px;
+}
+
+.font-red{
+    color: red;
+}
+</style>
+
+<table class="table table-font nanum">
+    <thead class = "thead-light">
     <tr>
         <th>캠퍼스</th>
         <th>학수번호</th>
@@ -11,7 +23,7 @@
         <th>교과목명</th>
         <th>담당교수</th>
         <th>학점</th>
-        <th>경쟁률</th>
+        <th class = "font-red">경쟁률</th>
     </tr>
     </thead>
     <tbody>
@@ -26,7 +38,7 @@
           <td><%= @courses.find(current_user.sel1).course_name %></td>
           <td><%= @courses.find(current_user.sel1).lecturer %></td>
           <td><%= @courses.find(current_user.sel1).credit %></td>
-          <td><%= @courses.find(current_user.sel1).rate.to_f/5.0%>:1</td>
+          <td class = "font-red"><%= @courses.find(current_user.sel1).rate.to_f/5.0%>:1</td>
         </tr>
                 <tr>
           <td><%= @courses.find(current_user.sel2).campus %></td>
@@ -36,7 +48,7 @@
           <td><%= @courses.find(current_user.sel2).course_name %></td>
           <td><%= @courses.find(current_user.sel2).lecturer %></td>
           <td><%= @courses.find(current_user.sel2).credit %></td>
-          <td><%= @courses.find(current_user.sel2).rate.to_f/5.0%>:1</td>
+          <td class = "font-red"><%= @courses.find(current_user.sel2).rate.to_f/5.0%>:1</td>
         </tr>
                 <tr>
           <td><%= @courses.find(current_user.sel3).campus %></td>
@@ -46,7 +58,7 @@
           <td><%= @courses.find(current_user.sel3).course_name %></td>
           <td><%= @courses.find(current_user.sel3).lecturer %></td>
           <td><%= @courses.find(current_user.sel3).credit %></td>
-          <td><%= @courses.find(current_user.sel3).rate.to_f/5.0%>:1</td>
+          <td class = "font-red"><%= @courses.find(current_user.sel3).rate.to_f/5.0%>:1</td>
         </tr>
                 <tr>
           <td><%= @courses.find(current_user.sel4).campus %></td>
@@ -56,7 +68,7 @@
           <td><%= @courses.find(current_user.sel4).course_name %></td>
           <td><%= @courses.find(current_user.sel4).lecturer %></td>
           <td><%= @courses.find(current_user.sel4).credit %></td>
-          <td><%= @courses.find(current_user.sel4).rate.to_f/5.0%>:1</td>
+          <td class = "font-red"><%= @courses.find(current_user.sel4).rate.to_f/5.0%>:1</td>
         </tr>
                 <tr>
           <td><%= @courses.find(current_user.sel5).campus %></td>
@@ -66,7 +78,7 @@
           <td><%= @courses.find(current_user.sel5).course_name %></td>
           <td><%= @courses.find(current_user.sel5).lecturer %></td>
           <td><%= @courses.find(current_user.sel5).credit %></td>
-          <td><%= @courses.find(current_user.sel5).rate.to_f/5.0%>:1</td>
+          <td class = "font-red"><%= @courses.find(current_user.sel5).rate.to_f/5.0%>:1</td>
         </tr>
                 <tr>
           <td><%= @courses.find(current_user.sel6).campus %></td>
@@ -76,7 +88,7 @@
           <td><%= @courses.find(current_user.sel6).course_name %></td>
           <td><%= @courses.find(current_user.sel6).lecturer %></td>
           <td><%= @courses.find(current_user.sel6).credit %></td>
-          <td><%= @courses.find(current_user.sel6).rate.to_f/5.0%>:1</td>
+          <td class = "font-red"><%= @courses.find(current_user.sel6).rate.to_f/5.0%>:1</td>
         </tr>
                 <tr>
           <td><%= @courses.find(current_user.sel7).campus %></td>
@@ -86,7 +98,7 @@
           <td><%= @courses.find(current_user.sel7).course_name %></td>
           <td><%= @courses.find(current_user.sel7).lecturer %></td>
           <td><%= @courses.find(current_user.sel7).credit %></td>
-          <td><%= @courses.find(current_user.sel7).rate.to_f/5.0%>:1</td>
+          <td class = "font-red"><%= @courses.find(current_user.sel7).rate.to_f/5.0%>:1</td>
         </tr>
 
     </tbody>
