--- a/app/views/home/rate.html.erb
+++ b/app/views/home/rate.html.erb
@@ -1,8 +1,10 @@
-<div class="container">
-<h1 class="text-center mt-5">경쟁률 조회</h1>
 
-<table class="table">
-    <thead>
+
+<div class="container">
+<h5 class="text-center mt-5 mb-4 nanum">경쟁률 조회</h5>
+
+<table class="table table-font text-center nanum">
+    <thead class = "thead-light">
     <tr>
         <th>캠퍼스</th>
         <th>학수번호</th>
@@ -33,8 +35,18 @@
 
      <% end %>
 
-    <input type="submit" value="확정">	
+    <style>
+        .put{
+            width:90%;
+            background-color: rgba(255,255,255, 0.7);
+            
+        }
+    </style>
+    <div class = "put d-flex justify-content-end mb-2 fixed-bottom nanum mx-auto ">
+        <input type="submit" value="확정" class = "btn, btn-danger">	
+    </div>
     </form>
+   
     </tbody>
 </table>
 </div>
